src/compiler_frontend/syntax_errors/tests/signature_tests.rs
use crate::compiler_frontend::compiler_messages::{CommonSyntaxMistakeReason, DiagnosticPayload};
use crate::compiler_frontend::tests::test_support::parse_single_file_ast_diagnostic;

#[test]
fn detects_open_parenthesis_as_parameter_delimiter_mistake() {
    let diagnostic =
        parse_single_file_ast_diagnostic("bad |a Int, (b Int)| -> Int:\n    return a\n;\n");

    assert!(matches!(
        diagnostic.payload,
        DiagnosticPayload::CommonSyntaxMistake {
            reason: CommonSyntaxMistakeReason::SignatureParenthesisDelimiter
        }
    ));
}
